<resources>
    <string name="app_name">VPN Aquarius</string>
    <string name="vpn_process_name" translatable="false">:vpn</string>
    <string name="vpn_provider_authorities" translatable="false">com.example.pavel.monero</string>
    <string name="login">login</string>
    <string name="countries">countries</string>
    <string name="start">START</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Статус Подключения:</string>
    <string name="login_is">Авторизация:</string>
    <string name="location">Страна:</string>
    <string name="bytes_transferred">Передано:</string>
    <string name="bytes_received">Получено:</string>
</resources>
