<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/purple"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/country_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="country" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:src="@mipmap/search"
                android:id="@+id/country_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:layout_marginEnd="19dp"
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:background="@drawable/button_country"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="75dp"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.pavel.monero.ui.view.CustomIndicator
                android:id="@+id/indicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="37dp" />

            <TextView
                android:id="@+id/target_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/location"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="135dp"
                android:textColor="@color/dark"
                android:fontFamily="sans-serif-condensed"
                android:textSize="40sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/liner_with_card"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card_view"
        android:layout_marginBottom="178dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30">

                <com.robinhood.spark.SparkView
                    android:id="@+id/spark_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="70">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/messageLoginIs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/login_is"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/LoginIs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:textSize="17sp"
                        android:textColor="@color/dark"
                        android:fontFamily="sans-serif-condensed"/>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="17dp"
                        android:gravity="center"
                        android:text="@string/login" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bytes_transferred"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/bytes_transferred"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_marginStart="5dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bytes_received"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/bytes_received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_marginStart="5dp"
                        android:textSize="20sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/out_put"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/info"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="11dp"
                        android:layout_marginStart="23dp"
                        android:textSize="20sp"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/dark"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/liner_with_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-135dp"
        android:background="@drawable/button_start"
        android:elevation="20dp"
        android:text="@string/start"
        android:textColor="@color/white"/>

</RelativeLayout>